# pipelite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES  MANIFEST.in  README.md  SECURITY.md  build-instructions.md  pyproject.toml  requirements.txt
config/metadata/datasources/: csvFileDS.json  odbcDS.json
config/metadata/files/: test_csv.json
config/parameters/datasources/: csvFileDS.json
config/pipelines/: csv2csv_concat.json  csv2csv_concat_lookup.json  csv2csv_direct.json  csv2csv_lookup.json  csv2csv_transcode.json  odbc2csv_direct.json  odbc2csv_direct_filequery.json  test_csv.json  xes2csv_direct.json
exe/: setup.py
logs/: pipe_csv2csv.log.1  pipe_csv2csv_concat.log.1
src/: dataplumbing.py
src/config/: cmdLineConfig.py  dpConfig.py  pipelineConfig.py
src/config/parameters/: etlObjects.json
src/config/pipelines/: csv2csv_concat.json  csv2csv_concat_lookup.json  csv2csv_direct.json  csv2csv_extractstr.json  csv2csv_jinja.json  csv2csv_join.json  csv2csv_lookup.json  csv2csv_renamecol.json  csv2parquet_direct.json  csv_multiple_profile.json  csv_poc.json  (+6 more)
src/datasources/: DataSource.py  csvFileDS.py  excelFileDS.py  folderDS.py  odbcDS.py  sapRfcTableDS.py  xesFileDS.py
src/fmk/: etlDataset.py  etlDatasets.py
src/pipelines/: directPL.py  dpInstantiableObj.py  etlDataset.py  etlDatasets.py  etlObject.py  pipeline.py  pipelineFactory.py  pipelineProcess.py
src/pipelite/: SqlTemplate.py  __init__.py  constants.py  dpObject.py  etlBaseObject.py  etlDataset.py  etlDatasets.py  objConfig.py  pipelineProcess.py  plBaseObject.py  plConfig.py  plDataset.py  plDatasets.py  plObject.py  plQueue.py
src/pipelite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plumbing/: __init__.py
src/transformers/: Transformer.py  concatTR.py  doNothingTR.py  donothingTR.py  extractstrTR.py  lookupTR.py  renamecolTR.py
src/utils/: __init__.py  constants.py  log.py
tests/: pipeliteTests.py  test_BP_Repo.py  test_CSV.py  test_DB.py  test_DS.py  test_EVTMap.py  test_Files.py  test_ODBC.py  test_SAP.py  test_TR.py  test_XES.py  test_excel.py
tests/config/: config-csv-csv.json
tests/data/: One Complete Session Log.csv  a.parquet  b.csv  chorus-evtmap.csv  dbsample.sqlite  evtmap-gen.csv  evtmap.csv  myquery.sql  script-dbsample.sql  t.csv  test.csv  test.xlsx  test2.csv  testtp.csv
(+81 files in other folders)
